Fix alignment bubble

--- a/html/css/pages/_bubble.scss
+++ b/html/css/pages/_bubble.scss
@@ -1,7 +1,7 @@
 #page-bubble{
-	position : relative
-	svg{
-		margin-top:71px;
+	position : relative;
+	#bubble > svg{
+		margin:auto !important;
 	}
 
 	.description-text{
